Fixed a header background style on mobile view

--- a/public_html/layout/denim/css_ltr/style.css
+++ b/public_html/layout/denim/css_ltr/style.css
@@ -1982,9 +1982,6 @@ body.center-right #config_content {
 @media only screen and (max-width: 767px) {
 
   #header {
-    -webkit-background-size: 256px auto;
-    -moz-background-size: 256px auto;
-    background-size: 256px auto;
     height: 80px;
     margin-top: 0;
   }
