--- a/public_html/layout/denim/css_src/src/stylus/sub/block_contents.styl
+++ b/public_html/layout/denim/css_src/src/stylus/sub/block_contents.styl
@@ -66,7 +66,7 @@ $header-height-mobile = 80px
         height: $header-height
         // All Mobile Sizes
         @media only screen and (max-width: $breakpoint-small-max)
-            background-size: 256px auto
+            //background-size: 256px auto
             height: $header-height-mobile
             margin-top: 0
 
